ETDA-1094  fixed view and css for author preview page so that arrows, circles, and text is aligned properly. Squashed commit of the following:
commit 0340440d53e2fcdd650bcf2e0a1ff31a4f852aa4
Author: jxb13@psu.edu <jxb13@psu.edu>
Date:   Thu May 24 11:26:19 2018 -0400

    ETDA-1094 - fixed view and css for author preview page so that arrows, circles, and text is aligned properly.

--- a/app/javascript/styles/author/screen.scss
+++ b/app/javascript/styles/author/screen.scss
@@ -148,29 +148,22 @@
   }
 
   &.preview, &.archive {
-    .step {
-      margin-bottom: 5px;
-      color: $gray-med-dark;
-
       .number {
         border: 1px solid $gray-med-dark;
       }
 
       .information {
-        min-height: 42px;
-
+        display: inline-block;
+        min-height: 60px;
+        width: 75%;
         .description {
-          padding-top: 7px;
-          font-size: 14px;
+          display: inline-block;
+          margin-top: 0px;
+          margin: 0px;
+          padding-top: 5px;
+          font-size: 16px;
         }
       }
-
-      .direction {
-        font-size: 9px;
-        top: 36px;
-        left: 10px;
-      }
-    }
   }
 
   &.archive {
@@ -183,12 +176,11 @@
         }
         .status {
           .glyphicon-ok-circle {
-            font-size: 120%;
+            font-size: 130%;
             color: $gray-med-dark;
           }
         }
       }
-
       .direction {
         color: $gray-med-dark;
       }
